@@ -179,6 +179,10 @@ Optional. If given, presents the output for the given moment, instead of the
 current time. Must be of the form understood by C<rrdtool> (see
 RRDTool manuals).
 
+=item Gstart, Gend, Gwidth, Gheight
+
+Optional vaiables that override the ones defined in the view.
+
 =item DEBUG
 
 Optional. If true, turns on the debug level of logging. The debug messages
