@@ -1,3 +1,9 @@
+2008-08-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_opts):
+	View parameters can be overridden with URL
+	variables "Gstart", "Gend" and so on.
+
 2008-08-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Release 1.0.7
